--- a/src/renderer/src/assets/main.scss
+++ b/src/renderer/src/assets/main.scss
@@ -49,6 +49,7 @@ textarea,
 .n-avatar,
 .n-autocomplete,
 .n-button,
+.n-layout-toggle-button,
 a {
   outline:none;
   -webkit-app-region: no-drag;
