--- a/src/renderer/src/assets/main.scss
+++ b/src/renderer/src/assets/main.scss
@@ -18,7 +18,7 @@
     background-color: var(--n-color);
   }
 }
-* {
+*:not(.monaco *) {
   font-family: var(--el-font-family) !important;
   // user-select: none;
 }
