--- a/src/renderer/src/assets/main.scss
+++ b/src/renderer/src/assets/main.scss
@@ -43,11 +43,11 @@ button,
 input,
 textarea,
 .n-a,
-.n-button,
-.n-input,
-.n-checkbox,
-.n-avatar,
-.n-autocomplete,
+.el-button,
+.el-input,
+.el-checkbox,
+.el-avatar,
+.el-autocomplete,
 .n-button,
 .n-layout-toggle-button,
 a {
