更换发信协议等

--- a/src/renderer/src/assets/main.scss
+++ b/src/renderer/src/assets/main.scss
@@ -22,7 +22,7 @@
   font-family: var(--el-font-family) !important;
   // user-select: none;
 }
-*:is(.monaco *, .n-code *, .katex *){
+*:is(.monaco *, .katex *){
   all:unset;
 }
 
